2014-01-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Consistent white space.

2014-01-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac, configure.ac: Use X toolkit for METAFONT only if
	requested explicitly.

	* Makefile.am, web2c-sh.in: Output from convert is (non)verbose.

2013-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* vptovf.ch: Use make_suffix() for implied tfm_name.
	* cpascal.h (makesuffix): Add this to the underscore list.
	* pltotf.test, tftopl.test, vftovp.test: Verify output files.
	* vptovf.test: Add test for 'vptovf foo.vpl bar.vf' and verify
	output files.
	* tests/cmr10.pl: Add SEVENBITSAFEFLAG.
	* am/web.am (DISTCLEANFILES): Additional files for vptovf.test.

2013-09-20  Karl Berry  <karl@tug.org>

	* configure.ac (NATIVE_TEXLIVE_BUILD): new AC_DEFINE,
	following --enable-texlive-build.  Used in LuaTeX and MetaPost.

2013-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop ACLOCAL_AMFLAGS.
	* configure.ac: Use AC_CONFIG_MACRO_DIRS.

2013-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/B.pdf (new):
	More test data for {lua,pdf}texdir/{lua,pdf}image.test.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, man/Makefile.am, omegafonts/Makefile.am:
	Moved Makefile fragments to ../../am/.

2013-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/1-4.jpg, tests/basic.tex, tests/lily-ledger-broken.png:
	Test data for {lua,pdf}texdir/{lua,pdf}image.test.

2013-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* w2c/config.h: Adapt to C++, i.e., when compiling C++ surround
	all declarations by 'extern "C" {' ... '}'.

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac (kpse_tex_progs): Drop explicit XeTeX dependencies
	on icu and graphite2, already implied by harfbuzz.

2013-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web2c.ac (kpse_tex_progs): LuaTeX requires libs/lua52.
	* Makefile.am: Drop luatexdir/am/liblua52.am.
